--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -47,6 +47,7 @@
         <module>spring-di</module>
         <module>spring-web</module>
         <module>spring-data-jpa</module>
+        <module>spring-boot-properties</module>
         <module>infinispan-cache-jpa</module>
         <module>elytron-security</module>
         <module>elytron-security-oauth2</module>
