issue-5942 Introduce a deterministic ordering, between extensions, for database schema updates

--- a/integration-tests/flyway/src/main/resources/application.properties
+++ b/integration-tests/flyway/src/main/resources/application.properties
@@ -12,3 +12,6 @@ quarkus.flyway.schemas=TEST_SCHEMA
 quarkus.flyway.table=flyway_quarkus_history
 quarkus.flyway.locations=db/location1,classpath:db/location2
 quarkus.flyway.sql-migration-prefix=V
+quarkus.flyway.migrate-at-start=true
+
+quarkus.hibernate-orm.database.generation=validate
