Add tests for application name and version handling

--- a/integration-tests/main/src/main/resources/application.properties
+++ b/integration-tests/main/src/main/resources/application.properties
@@ -13,6 +13,11 @@ org.eclipse.microprofile.rest.client.propagateHeaders=header-name
 # we probably won't be able to test SSL proper so it seems reasonable to set it globally
 quarkus.ssl.native=false
 
+# in tests 'quarkus.application.name' and `quarkus.application.version` do not get set from the build tool
+# here we are testing that override from properties works
+quarkus.application.name=main-integration-test
+quarkus.application.version=1.0
+
 quarkus.datasource.url: ${datasource.url}
 quarkus.datasource.driver: ${datasource.driver}
 quarkus.datasource.username: ${datasource.username}
