Ensure that NativeIT is only run during when using native profile
The other tests are only run when this profile is not active in order
to avoid running them multiple times (since they are slow as well)

Co-authored-by: Guillaume Smet <guillaume.smet@gmail.com>

--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -324,8 +324,9 @@ stages:
         parameters:
           poolSettings: ${{parameters.poolSettings}}
           expectUseVMs: ${{parameters.expectUseVMs}}
-          timeoutInMinutes: 25
+          timeoutInMinutes: 40
           modules:
+            - maven
             - jackson
             - jsonb
             - jgit
