--- a/integration-tests/maven/pom.xml
+++ b/integration-tests/maven/pom.xml
@@ -149,4 +149,50 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>native-image</id>
+            <activation>
+                <property>
+                    <name>native</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <!--suppress MavenModelInspection -->
+                                <maven.home>${maven.home}</maven.home>
+                                <maven.repo>${settings.localRepository}</maven.repo>
+                                <project.version>${project.version}</project.version>
+
+                                <!-- add a system property that can be used by JUnit to determine whether a native image can be built -->
+                                <quarkus.test.native>true</quarkus.test.native>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
