--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -36,7 +36,7 @@
         <smallrye-metrics.version>2.3.2</smallrye-metrics.version>
         <smallrye-open-api.version>1.1.20</smallrye-open-api.version>
         <smallrye-opentracing.version>1.3.2</smallrye-opentracing.version>
-        <smallrye-fault-tolerance.version>2.1.3</smallrye-fault-tolerance.version>
+        <smallrye-fault-tolerance.version>4.0.0</smallrye-fault-tolerance.version>
         <smallrye-jwt.version>2.0.10</smallrye-jwt.version>
         <smallrye-context-propagation.version>1.0.11</smallrye-context-propagation.version>
         <smallrye-reactive-streams-operators.version>1.0.10</smallrye-reactive-streams-operators.version>
@@ -1237,6 +1237,11 @@
             <dependency>
                 <groupId>io.smallrye</groupId>
                 <artifactId>smallrye-fault-tolerance</artifactId>
+                <version>${smallrye-fault-tolerance.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.smallrye</groupId>
+                <artifactId>smallrye-fault-tolerance-context-propagation</artifactId>
                 <version>${smallrye-fault-tolerance.version}</version>
             </dependency>
             <dependency>
