Show stacktrace when building the gradle plugin

--- a/devtools/gradle/pom.xml
+++ b/devtools/gradle/pom.xml
@@ -64,6 +64,7 @@
                                 <argument>${gradle.task}</argument>
                                 <argument>-Pdescription=${project.description}</argument>
                                 <argument>-S</argument>
+                                <argument>--stacktrace</argument>
                             </arguments>
                             <environmentVariables>
                                 <MAVEN_LOCAL_REPO>${settings.localRepository}</MAVEN_LOCAL_REPO>
