--- a/extensions/config-yaml/runtime/pom.xml
+++ b/extensions/config-yaml/runtime/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>quarkus-config-yaml</artifactId>
     <name>Quarkus - Configuration - YAML - Runtime</name>
+    <description>Use YAML to configure your Quarkus application</description>
 
     <dependencies>
         <dependency>
