--- a/extensions/logging-gelf/runtime/pom.xml
+++ b/extensions/logging-gelf/runtime/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>quarkus-logging-gelf</artifactId>
     <name>Quarkus - Logging - GELF - Runtime</name>
+    <description>Log using the Graylog Extended Log Format and centralize your logs in ELK or EFK</description>
 
     <dependencies>
         <dependency>
