ArC and Qute apply the Maven impsort plugin unconditionally

--- a/independent-projects/arc/pom.xml
+++ b/independent-projects/arc/pom.xml
@@ -263,6 +263,7 @@
                     <version>1.2.0</version>
                     <configuration>
                         <removeUnused>true</removeUnused>
+                        <skip>${format.skip}</skip>
                     </configuration>
                 </plugin>
             </plugins>
