--- a/independent-projects/qute/pom.xml
+++ b/independent-projects/qute/pom.xml
@@ -213,6 +213,7 @@
                     <version>1.2.0</version>
                     <configuration>
                         <removeUnused>true</removeUnused>
+                        <skip>${format.skip}</skip>
                     </configuration>
                 </plugin>
             </plugins>
