--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -150,8 +150,9 @@
         <flyway.version>6.1.3</flyway.version>
         <yasson.version>1.0.5</yasson.version>
         <neo4j-java-driver.version>4.0.0</neo4j-java-driver.version>
-        <mongo-client.version>3.10.2</mongo-client.version>
-        <mongo-reactivestreams-client.version>1.11.0</mongo-reactivestreams-client.version>
+        <mongo-client.version>3.12.0</mongo-client.version>
+        <mongo-reactivestreams-client.version>1.13.0</mongo-reactivestreams-client.version>
+        <mongo-crypt.version>1.0.0</mongo-crypt.version>
         <artemis.version>2.10.1</artemis.version>
         <okhttp.version>3.12.6</okhttp.version>
         <sentry.version>1.7.28</sentry.version>
@@ -1479,6 +1480,11 @@
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongodb-driver-reactivestreams</artifactId>
                 <version>${mongo-reactivestreams-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-crypt</artifactId>
+                <version>${mongo-crypt.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.minidev</groupId>
