--- a/.github/workflows/native-cron-build.yml
+++ b/.github/workflows/native-cron-build.yml
@@ -2,6 +2,9 @@ name: "Quarkus Cron Native image"
 on:
   schedule:
     - cron: '0 2 * * *'
+  pull_request:
+    branches:
+      - master
   repository_dispatch:
 
 
@@ -28,8 +31,8 @@ jobs:
       - name: Checkout Quarkus
         uses: actions/checkout@v2
         with:
-          repository: quarkusio/quarkus
-          ref: master
+          repository: aguibert/quarkus
+          ref: smart-testing
 
       - uses: actions/cache@v1
         with:
@@ -38,34 +41,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Run dependency checker
+        run: |
+          echo "@AGG Inside of dependency checker task"
+          echo "GITHUB_SHA=${GITHUB_SHA}"
+          echo "GITHUB_REF=$GITHUB_REF"
+          echo "GITHUB_HEAD_REF=$GITHUB_HEAD_REF"
+          echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
+          mvn -B -f independent-projects/utilities/dependency-checker/pom.xml package
+          java -jar independent-projects/utilities/dependency-checker/target/quarkus-utilities-dependency-checker-999-SNAPSHOT-jar-with-dependencies.jar ${GITHUB_BASE_REF} ${GITHUB_HEAD_REF}
+
       - name: Build Quarkus
         run: mvn -B install -DskipTests -DskipITs -Dno-format
 
       - name: Run integration tests in native
-        run: mvn -B  --settings azure-mvn-settings.xml verify -f integration-tests/pom.xml -DskipTests  -Dno-format -Ddocker -Dnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:19.3.1-java${{ matrix.java }} -Dtest-postgresql -Dtest-elasticsearch -Dtest-mysql -Dtest-dynamodb -Dtest-vault -Dtest-neo4j
-
-      - name: Report
-        if: always()
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
-          STATUS: ${{ job.status }}
-          JAVA_VERSION: ${{ matrix.java }}
         run: |
-          echo "The report step got status: ${STATUS}"
-          sudo apt-get update -o Dir::Etc::sourcelist="sources.list" \
-            -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
-          sudo apt-get install -y gnupg2 gnupg-agent
-          echo Installing SDKMAN
-          curl -s "https://get.sdkman.io" | bash
-          source ~/.sdkman/bin/sdkman-init.sh && \
-          sdk install kotlin 1.3.61 && \
+          TESTS_TO_RUN=$(cat target/tests-to-run.txt)
+          echo "@AGG will run the tests: $TESTS_TO_RUN"
+          mvn -B --settings azure-mvn-settings.xml verify -f integration-tests/pom.xml $TESTS_TO_RUN -DskipTests  -Dno-format -Ddocker -Dnative -Dquarkus.native.container-build=true -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:19.3.1-java${{ matrix.java }} -Dtest-postgresql -Dtest-elasticsearch -Dtest-mysql -Dtest-dynamodb -Dtest-vault -Dtest-neo4j
 
-          # we need to install Java 8 because kscript doesn't yet work with Java 11: https://github.com/holgerbrandl/kscript/issues/239
-          if [[ ${JAVA_VERSION} = 11 ]]; then
-            echo "y" | sdk install java 8.0.232-open
-            export JAVA_HOME="$HOME/.sdkman/candidates/java/current"
-          fi
-
-          sdk install kscript 2.9.0
-          [[ ${JAVA_VERSION} = 8 ]] && ISSUE_NUMBER="6717" || ISSUE_NUMBER="6723"
-          kscript .github/NativeBuildReport.kts ${GITHUB_TOKEN} ${STATUS} ${ISSUE_NUMBER}
