--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>independent-projects/bootstrap</module>
         <module>independent-projects/tools</module>
         <module>independent-projects/qute</module>
+        <module>independent-projects/utilities</module>
 
         <!-- BOMs and parent POM -->
         <module>bom/runtime</module>
