--- a/integration-tests/logging-gelf/src/main/resources/application.properties
+++ b/integration-tests/logging-gelf/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 quarkus.log.handler.gelf.enabled=true
 quarkus.log.handler.gelf.host=localhost
 quarkus.log.handler.gelf.port=12201
+quarkus.log.handler.gelf.facility=custom
+quarkus.log.handler.gelf.additional-fields=field1=value,field2=1
+quarkus.log.handler.gelf.additional-fields-types=field1=String,field2=long
