--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -197,6 +197,7 @@
         <google-http-client.version>1.34.0</google-http-client.version>
         <cxf.version>3.3.4</cxf.version>
         <saaj.version>1.4.0</saaj.version>
+        <woodstox.version>5.0.3</woodstox.version>
     </properties>
 
     <dependencyManagement>
@@ -1548,7 +1549,20 @@
                         <groupId>javax.annotation</groupId>
                         <artifactId>javax.annotation-api</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                    </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.woodstox</groupId>
+                <artifactId>woodstox-core</artifactId>
+                <version>${woodstox.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.messaging.saaj</groupId>
@@ -1563,7 +1577,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-transports-http-undertow</artifactId>
+                <artifactId>cxf-rt-transports-http</artifactId>
                 <version>${cxf.version}</version>
                 <exclusions>
                     <exclusion>
@@ -1581,6 +1595,14 @@
                     <exclusion>
                         <groupId>javax.annotation</groupId>
                         <artifactId>javax.annotation-api</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
