Add a couple of missing extension descriptions

--- a/core/runtime/pom.xml
+++ b/core/runtime/pom.xml
@@ -13,6 +13,7 @@
 
     <artifactId>quarkus-core</artifactId>
     <name>Quarkus - Core - Runtime</name>
+    <description>Core components and extension framework</description>
 
     <dependencies>
         <dependency>
