--- a/extensions/elytron-security-common/runtime/pom.xml
+++ b/extensions/elytron-security-common/runtime/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>quarkus-elytron-security-common</artifactId>
     <name>Quarkus - Elytron Security - Common - Runtime</name>
+    <description>Elytron common GraalVM substitutions</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
