--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -76,7 +76,7 @@
         <!-- What we actually depend on for the annotations, as latest Graal is not available in Maven fast enough: -->
         <graal-sdk.version>19.3.0.2</graal-sdk.version>
         <gizmo.version>1.0.0.Final</gizmo.version>
-        <jackson.version>2.9.10.20191020</jackson.version>
+        <jackson.version>2.10.1</jackson.version>
         <commons-logging-jboss-logging.version>1.0.0.Final</commons-logging-jboss-logging.version>
         <commons-lang3.version>3.9</commons-lang3.version>
         <commons-codec.version>1.13</commons-codec.version>
