--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -56,6 +56,7 @@
         <module>flyway</module>
         <module>oidc</module>
         <module>oidc-code-flow</module>
+        <module>oidc-tenancy</module>
         <module>keycloak-authorization</module>
         <module>reactive-pg-client</module>
         <module>reactive-mysql-client</module>
