--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -269,6 +269,7 @@ stages:
             - elytron-resteasy
             - oidc
             - oidc-code-flow
+            - oidc-tenancy
             - vault-app
             - keycloak-authorization
           name: security_2
