Make the locale configuration global

--- a/extensions/hibernate-validator/deployment/src/test/resources/application.properties
+++ b/extensions/hibernate-validator/deployment/src/test/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.hibernate-validator.locales=en,en-US,fr-FR
-quarkus.hibernate-validator.default-locale=fr-FR
+quarkus.locales=en,en-US,fr-FR
+quarkus.default-locale=fr-FR
