--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -34,7 +34,8 @@
            what we work with by self downloading it: -->
         <graal-sdk.version-for-documentation>19.3.0</graal-sdk.version-for-documentation>
         <rest-assured.version>4.1.1</rest-assured.version>
-        <axle-client.version>0.0.9</axle-client.version>
+        <axle-client.version>0.0.12</axle-client.version>
+        <mutiny-client.version>0.0.12</mutiny-client.version>
         <vertx.version>3.8.4</vertx.version>
         <artemis.version>2.10.1</artemis.version>
 
