--- a/integration-tests/amazon-lambda-http/pom.xml
+++ b/integration-tests/amazon-lambda-http/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>quarkus-integration-test-amazon-lambda-http</artifactId>
     <name>Quarkus - Integration Tests - Amazon Lambda HTTP</name>
-    <description>Module that contains Amazon Lambda related tests for Resteasy</description>
+    <description>Module that contains Amazon Lambda related tests for RESTEasy</description>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
