--- a/devtools/allopen/pom.xml
+++ b/devtools/allopen/pom.xml
@@ -10,6 +10,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>quarkus-all-open</artifactId>
+    <artifactId>quarkus-allopen</artifactId>
     <name>Quarkus - AllOpen Plugin</name>
 </project>
