--- a/independent-projects/qute/pom.xml
+++ b/independent-projects/qute/pom.xml
@@ -40,6 +40,7 @@
         <version.jboss-logging>3.3.2.Final</version.jboss-logging>
         <version.reactivestreams>1.0.2</version.reactivestreams>
         <version.rxjava2>2.2.10</version.rxjava2>
+        <version.mutiny>0.1.2</version.mutiny>
         <version.smallrye-reactive-streams-operators>1.0.6</version.smallrye-reactive-streams-operators>
         <version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
     </properties>
@@ -47,6 +48,7 @@
     <modules>
         <module>core</module>
         <module>rxjava</module>
+        <module>mutiny</module>
         <module>generator</module>
     </modules>
 
@@ -68,6 +70,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.quarkus.qute</groupId>
+                <artifactId>qute-mutiny</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
                 <version>${version.jboss-logging}</version>
@@ -86,6 +93,11 @@
                 <groupId>io.reactivex.rxjava2</groupId>
                 <artifactId>rxjava</artifactId>
                 <version>${version.rxjava2}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.smallrye.reactive</groupId>
+                <artifactId>mutiny</artifactId>
+                <version>${version.mutiny}</version>
             </dependency>
             <dependency>
                 <groupId>io.smallrye.reactive</groupId>
