Add qute-mutiny to the qute extension

--- a/extensions/qute/runtime/pom.xml
+++ b/extensions/qute/runtime/pom.xml
@@ -31,6 +31,10 @@
             <groupId>io.quarkus.qute</groupId>
             <artifactId>qute-rxjava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus.qute</groupId>
+            <artifactId>qute-mutiny</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
