--- a/extensions/reactive-mysql-client/runtime/pom.xml
+++ b/extensions/reactive-mysql-client/runtime/pom.xml
@@ -44,6 +44,10 @@
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-axle-mysql-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>smallrye-mutiny-vertx-mysql-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
