--- a/extensions/reactive-pg-client/runtime/pom.xml
+++ b/extensions/reactive-pg-client/runtime/pom.xml
@@ -28,6 +28,10 @@
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-axle-pg-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>smallrye-mutiny-vertx-pg-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
