--- a/devtools/allopen/pom.xml
+++ b/devtools/allopen/pom.xml
@@ -12,4 +12,10 @@
 
     <artifactId>quarkus-allopen</artifactId>
     <name>Quarkus - AllOpen Plugin</name>
+
+    <properties>
+        <gradle.executable>./gradlew</gradle.executable>
+        <gradle.task>build</gradle.task>
+        <skip.gradle.build>false</skip.gradle.build>
+    </properties>
 </project>
