Declare extension in bom to avoid having to specify the versions

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -560,6 +560,13 @@
                 <version>${project.version}</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-mutiny-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- Quarkus test dependencies -->
 
             <dependency>
