--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -550,6 +550,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-resteasy-mutiny</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-resteasy-server-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -2687,6 +2692,11 @@
             <dependency>
                 <groupId>io.quarkus.qute</groupId>
                 <artifactId>qute-rxjava</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus.qute</groupId>
+                <artifactId>qute-mutiny</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
