Implement Resteasy Mutiny support

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -49,6 +49,7 @@
         <module>resteasy-jackson</module>
         <module>resteasy-jaxb</module>
         <module>resteasy-qute</module>
+        <module>resteasy-mutiny</module>
         <module>rest-client</module>
         <module>smallrye-openapi-common</module>
         <module>smallrye-openapi</module>
