Provide description to the new extensions

--- a/extensions/mutiny/runtime/pom.xml
+++ b/extensions/mutiny/runtime/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>quarkus-mutiny</artifactId>
     <name>Quarkus - Mutiny - Runtime</name>
+    <description>Mutiny is a Reactive Programming library</description>
     <dependencies>
 
         <dependency>
