--- a/integration-tests/elytron-undertow/src/main/resources/META-INF/web.xml
+++ b/integration-tests/elytron-undertow/src/main/resources/META-INF/web.xml
@@ -5,7 +5,10 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
          metadata-complete="false">
-
+    <servlet-mapping>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <url-pattern>/mapped/*</url-pattern>
+    </servlet-mapping>
     <security-constraint>
 
         <web-resource-collection>
