--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -1472,7 +1472,18 @@
 
             <dependency>
                 <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
+                <artifactId>mongodb-driver-sync</artifactId>
+                <version>${mongo-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-async</artifactId>
+                <version>${mongo-client.version}</version>
+            </dependency>
+            <!-- mongodb-driver-legacy is not needed for Quarkus but we add the dependency for backward compatibility -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-legacy</artifactId>
                 <version>${mongo-client.version}</version>
             </dependency>
             <dependency>
