Revert prefix Kogito to extension name

--- a/extensions/optaplanner/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/optaplanner/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 ---
-name: "Kogito OptaPlanner constraint solver AI"
+name: "OptaPlanner constraint solver AI"
 metadata:
   keywords:
   - "optaplanner"
