--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -94,6 +94,9 @@ stages:
 
         steps:
           - template: jvm-build-steps.yaml
+            parameters:
+              # we only generate the PDF documentation once for the initial JDK 8 build
+              extra: '-Ddocumentation-pdf'
           - publish: $(MAVEN_CACHE_FOLDER)
             artifact: $(Build.SourceVersion)-BuiltMavenRepo
           - template: prepare-cache.yaml
