--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -664,6 +664,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-spring-cloud-config-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-swagger-ui</artifactId>
                 <version>${project.version}</version>
             </dependency>
