--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -48,6 +48,7 @@
         <module>spring-web</module>
         <module>spring-data-jpa</module>
         <module>spring-boot-properties</module>
+        <module>spring-cloud-config-client</module>
         <module>infinispan-cache-jpa</module>
         <module>elytron-security</module>
         <module>elytron-security-oauth2</module>
