--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -728,6 +728,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-elytron-security-ldap</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-vault</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -771,6 +776,11 @@
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-test-h2</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-test-ldap</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -1858,6 +1868,11 @@
             <dependency>
               <groupId>org.wildfly.security</groupId>
               <artifactId>wildfly-elytron-realm-jdbc</artifactId>
+              <version>${wildfly-elytron.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.wildfly.security</groupId>
+              <artifactId>wildfly-elytron-realm-ldap</artifactId>
               <version>${wildfly-elytron.version}</version>
             </dependency>
             <dependency>
