Introduce transactional observer support.

--- a/independent-projects/arc/pom.xml
+++ b/independent-projects/arc/pom.xml
@@ -36,6 +36,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Versions -->
         <version.cdi>2.0.2</version.cdi>
+        <version.jta>1.3.3</version.jta>
         <version.jandex>2.1.2.Final</version.jandex>
         <version.junit5>5.5.2</version.junit5>
         <version.maven>3.5.4</version.maven>
@@ -126,6 +127,12 @@
                 <artifactId>jakarta.annotation-api</artifactId>
                 <version>${version.jakarta-annotation}</version>
                 <!-- scope>provided</scope -->
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.transaction</groupId>
+                <artifactId>jakarta.transaction-api</artifactId>
+                <version>${version.jta}</version>
             </dependency>
 
             <dependency>
