Enable maven.compiler.parameters in Hibernate Validator IT
This is the default for our generated projects and it avoids a warning.

--- a/integration-tests/hibernate-validator/pom.xml
+++ b/integration-tests/hibernate-validator/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>quarkus-integration-test-hibernate-validator</artifactId>
     <name>Quarkus - Integration Tests - Hibernate Validator</name>
     <description>Module that contains Hibernate Validator/Bean Validation related tests</description>
+
+    <properties>
+        <maven.compiler.parameters>true</maven.compiler.parameters>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
