fix (#6580) Add openshift, knative and more to the list of supported prefixes in the kubernetes extension.

--- a/integration-tests/kubernetes/src/it/kubernetes-with-application-properties/src/main/resources/application.properties
+++ b/integration-tests/kubernetes/src/it/kubernetes-with-application-properties/src/main/resources/application.properties
@@ -6,4 +6,4 @@ kubernetes.labels[0].value=bar
 kubernetes.env-vars[0].name=MY_ENV_VAR
 kubernetes.env-vars[0].value=SOMEVALUE
 kubernetes.group=grp
-kubernetes.registry=quay.io
+docker.registry=quay.io
