--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -27,13 +27,14 @@
         <quarkus-http.version>3.0.2.Final</quarkus-http.version>
         <jboss-servlet-api_4.0_spec.version>1.0.0.Final</jboss-servlet-api_4.0_spec.version>
         <microprofile-config-api.version>1.4</microprofile-config-api.version>
+        <microprofile-metrics-api.version>2.3</microprofile-metrics-api.version>
         <microprofile-context-propagation.version>1.0.1</microprofile-context-propagation.version>
         <microprofile-opentracing-api.version>1.3.1</microprofile-opentracing-api.version>
         <microprofile-reactive-streams-operators.version>1.0</microprofile-reactive-streams-operators.version>
         <microprofile-rest-client.version>1.3.4</microprofile-rest-client.version>
         <smallrye-config.version>1.6.1</smallrye-config.version>
         <smallrye-health.version>2.1.0</smallrye-health.version>
-        <smallrye-metrics.version>2.3.3</smallrye-metrics.version>
+        <smallrye-metrics.version>2.4.0</smallrye-metrics.version>
         <smallrye-open-api.version>1.2.0</smallrye-open-api.version>
         <smallrye-opentracing.version>1.3.3</smallrye-opentracing.version>
         <smallrye-fault-tolerance.version>4.0.0</smallrye-fault-tolerance.version>
@@ -1603,6 +1604,17 @@
                 <groupId>org.eclipse.microprofile.config</groupId>
                 <artifactId>microprofile-config-api</artifactId>
                 <version>${microprofile-config-api.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.annotation.versioning</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.microprofile.metrics</groupId>
+                <artifactId>microprofile-metrics-api</artifactId>
+                <version>${microprofile-metrics-api.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.osgi</groupId>
