--- a/extensions/smallrye-metrics/deployment/pom.xml
+++ b/extensions/smallrye-metrics/deployment/pom.xml
@@ -38,6 +38,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-metrics-spi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.metrics</groupId>
+            <artifactId>microprofile-metrics-api</artifactId>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
