--- a/tcks/microprofile-metrics/pom.xml
+++ b/tcks/microprofile-metrics/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>api</module>
         <module>rest</module>
+        <module>optional</module>
     </modules>
 
 </project>
